# LibKlustersShared

./: CMakeLists.txt  LibKlustersSharedConfig.cmake.in  README.md  depends
src/: CMakeLists.txt  libklustersshared_export.h
src/gui/: dockarea.h  klusterrubberband.h  qcolorbutton.h  qextendtabwidget.h  qhelpviewer.h  qrecentfileaction.h
src/gui/page/: qextenddialog.h  qpagedialog.h  qpagedialog_p.h  qpagemodel.h  qpageview.h  qpagewidget.h  qpagewidgetmodel.h
src/libinqt5/: qstandardpaths.h
src/shared/: array.h  channelcolors.h  itemcolors.h  utilities.h  zoomwindow.h
test/: CMakeLists.txt
